implement hit display in blast panel

--- a/plugins/JBlast/BlastPanel.html
+++ b/plugins/JBlast/BlastPanel.html
@@ -31,6 +31,7 @@
                 <h2 class="title">Blast Filter</h2>
                 <!--button id="blast-filter-close-btn" style="float:right;" class="btn btn-primary">-</button-->
                 <p class="blast-group-descript">...</p>
+                <div class="blast-hit-data">Hits</div>
             </div>
             <table class="blast-filter-sliders" style="width:100%;cellpadding:10px">
                 <tr>
