implement queue event handling.

--- a/plugins/JBlast/HistoryPanel.html
+++ b/plugins/JBlast/HistoryPanel.html
@@ -13,7 +13,7 @@
 
         setTimeout(function(){
             $('.extruder-container').css('height','350px');     // for some reason, we must do this, why?
-            doGetQueue();
+            //doGetQueue();
             //doGetJob();
         },3000);
 
@@ -24,8 +24,8 @@
                 <table >
                     <tr id="head">
                         <td>ID</td>
-                        <td>State</td>
-                        <td >%</td>
+                        <td>St</td>
+                        <td>%</td>
                         <td>Name</td>
                     </tr>
                 </table>
