setup use of client-side dependency libraries based on libroutes

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <!-- todo: AMDize these plugins -->
     <!-- Fuel UX -->
     <!--link href="src/templib/jquery-ui-smoothness.css" rel="stylesheet"-->
-    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/jblib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!--link href="src/templib/fuelux.min.css" rel="stylesheet"-->
     
-    <link type="text/css" rel="stylesheet" href="src/qTip/jquery.qtip.css" />
+    <!--link type="text/css" rel="stylesheet" href="src/qTip/jquery.qtip.css" /-->
 
-    <link type="text/css" rel="stylesheet" href="/jquery-ui/jquery-ui.min.css" />
-    <link type="text/css" rel="stylesheet" href="/jquery-ui/jquery-ui.structure.min.css" />
-    <link type="text/css" rel="stylesheet" href="/jquery-ui/jquery-ui.theme.min.css" />
+    <link type="text/css" rel="stylesheet" href="/jblib/jquery-ui/jquery-ui.min.css" />
+    <link type="text/css" rel="stylesheet" href="/jblib/jquery-ui/jquery-ui.structure.min.css" />
+    <link type="text/css" rel="stylesheet" href="/jblib/jquery-ui/jquery-ui.theme.min.css" />
     
-    <script src="/jquery/jquery.js"></script>
-    <script src="/jquery-ui/jquery-ui.min.js"></script>
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/jblib/jquery/dist/jquery.min.js"></script>
+    <script src="/jblib/jquery-ui/jquery-ui.min.js"></script>
+    <script src="/jblib/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!--script type="text/javascript" src="src/qTip/jquery.qtip.js"></script>        <script type="text/javascript">
         // for cross origin sails server access
