--- a/plugins/JBlast/BlastPanel.html
+++ b/plugins/JBlast/BlastPanel.html
@@ -14,14 +14,14 @@
 -->
 
 
-<link type="text/css" rel="stylesheet" href="plugins/JBlast/js/node_modules/jQuery-ui-Slider-Pips/dist/jquery-ui-slider-pips.min.css" />
-<script type="text/javascript" src="plugins/JBlast/js/node_modules/jQuery-ui-Slider-Pips/dist/jquery-ui-slider-pips.min.js"></script>    
+<link type="text/css" rel="stylesheet" href="/jblib/slider-pips/dist/jquery-ui-slider-pips.min.css" />
+<script type="text/javascript" src="/jblib/slider-pips/dist/jquery-ui-slider-pips.min.js"></script>    
 
 
-<link href="plugins/JBlast/js/node_modules/jquery.mb.extruder/css/mbExtruder.css" media="all" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="plugins/JBlast/js/node_modules/jquery.mb.extruder/inc/jquery.hoverIntent.min.js"></script>
-<script type="text/javascript" src="plugins/JBlast/js/node_modules/jquery.mb.extruder/inc/jquery.mb.flipText.js"></script>
-<script type="text/javascript" src="plugins/JBlast/js/node_modules/jquery.mb.extruder/inc/mbExtruder.js"></script>
+<link href="/jblib/mb.extruder/css/mbExtruder.css" media="all" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="/jblib/mb.extruder/inc/jquery.hoverIntent.min.js"></script>
+<script type="text/javascript" src="/jblib/mb.extruder/inc/jquery.mb.flipText.js"></script>
+<script type="text/javascript" src="/jblib/mb.extruder/inc/mbExtruder.js"></script>
 
 
 
