change queue state images to use css background instead of img. discard joblist.js (obsolete)

--- a/plugins/JBlast/HistoryPanel.html
+++ b/plugins/JBlast/HistoryPanel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <script src="plugins/JBlast/js/jobList.js"></script>
+    <!--script src="plugins/JBlast/js/jobList.js"></script-->
     <script src="plugins/JBlast/js/queList.js"></script>
     <script>
         setInterval(function() {
@@ -24,7 +24,7 @@
                 <table >
                     <tr id="head">
                         <td>ID</td>
-                        <td></td>
+                        <td style='width:20px'></td>
                         <td>%</td>
                         <td>Name</td>
                     </tr>
