remove progress column from queue

--- a/plugins/JBlast/HistoryPanel.html
+++ b/plugins/JBlast/HistoryPanel.html
@@ -23,9 +23,9 @@
         <div class="CSSTableGenerator" >
                 <table >
                     <tr id="head">
-                        <td>ID</td>
+                        <td style='width:30px'>ID</td>
                         <td style='width:20px'></td>
-                        <td>%</td>
+                        <!--td>%</td-->
                         <td>Name</td>
                     </tr>
                 </table>
