implement tabbed blast filter in sidebar #110

--- a/plugins/JBlast/BlastPanel.html
+++ b/plugins/JBlast/BlastPanel.html
@@ -2,7 +2,6 @@
     <div style="display:none">
         <div id="blast-filter-group" class="input-group blast-filter-group" style="display:none">
             <div class="blast-slider-title">
-                <h2 class="title">Blast Filter</h2>
                 <!--button id="blast-filter-close-btn" style="float:right;" class="btn btn-primary">-</button-->
                 <p class="blast-group-descript">...</p>
                 <div class="blast-hit-data">Hits</div>
@@ -28,3 +27,9 @@
         </div>
     </div>
 
+    <div id="tabs-panel" style="display:none">
+        <ul class="nav nav-tabs jblast-tabs">
+            <li id="tab-track-select" class="active"><a data-toggle="tab" href="#select">Select Tracks</a></li>
+          <li id="tab-jblast-filter" style="display:none"><a data-toggle="tab" href="#menu1">Blast Filter</a></li>
+        </ul>    
+    </div>
