add resize handling for result table - however disable for now.

--- a/plugins/JBlast/BlastPanel.html
+++ b/plugins/JBlast/BlastPanel.html
@@ -24,8 +24,9 @@
                     <td class="blast-slider-item-c2"><div id="slider-gap-data" class="blast-slider-item-data panel panel-default panel-body">0</div></td>
                 </tr>
             </table>
-            <hr>
-            <table id="blast-result-table" class="display" width="100%"></table>
+            <div id="result-table-container" style="padding-right:25px">
+                <table id="blast-result-table" class="display" width="100%"></table>
+            </div>
 
         </div>
     </div>
